--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <div class="logo">🎵 Whisperly</div>
+            <div class="logo">Whisperly: Your Personal AI Companion</div>
             <div class="subtitle">Terms and Conditions</div>
         </header>
 
@@ -220,7 +220,7 @@
             <p>By accessing or using Whisperly ("the Service"), you agree to comply with and be bound by these Terms and Conditions ("Terms"). If you do not agree to these Terms, please do not use the Service.</p>
 
             <h2>2. Description of Service</h2>
-            <p>Whisperly is an audio subscription platform that provides users with access to premium audio content, including podcasts, audiobooks, music, and other audio entertainment. Our service offers various subscription tiers with different features and content access levels.</p>
+            <p>Whisperly is an audio transcription tool that allows users to record audio, transcribe it and share it. Our service offers various subscription tiers with different features and transcription capabilities.</p>
 
             <h2>3. User Accounts</h2>
             <h3>3.1 Registration</h3>
@@ -228,9 +228,6 @@
             
             <h3>3.2 Account Responsibility</h3>
             <p>You are solely responsible for all activities that occur under your account. You must notify us immediately of any unauthorized use of your account.</p>
-
-            <h3>3.3 Age Requirements</h3>
-            <p>You must be at least 13 years old to use Whisperly. Users under 18 require parental consent.</p>
 
             <h2>4. Subscription Plans and Billing</h2>
             <h3>4.1 Subscription Tiers</h3>
@@ -248,13 +245,7 @@
             <p>We reserve the right to modify subscription prices with 30 days' notice to existing subscribers. Price changes will not affect your current billing cycle.</p>
 
             <h2>5. Content and Usage Rights</h2>
-            <h3>5.1 Licensed Content</h3>
-            <p>All audio content on Whisperly is licensed for personal, non-commercial use only. You may not redistribute, broadcast, or share content outside the platform.</p>
-
-            <h3>5.2 Offline Access</h3>
-            <p>Certain subscription tiers allow offline downloading for personal use. Downloaded content expires based on your subscription status and licensing agreements.</p>
-
-            <h3>5.3 Content Availability</h3>
+            <h3>5.1 Content Availability</h3>
             <p>Content availability may vary by region and may be removed or modified without notice due to licensing restrictions.</p>
 
             <h2>6. User Conduct</h2>
@@ -288,7 +279,7 @@
             <p>To the fullest extent permitted by law, Whisperly shall not be liable for any indirect, incidental, special, or consequential damages arising from your use of the service.</p>
 
             <h2>11. Governing Law and Disputes</h2>
-            <p>These Terms are governed by the laws of [Your Jurisdiction]. Any disputes will be resolved through binding arbitration or in the courts of [Your Jurisdiction].</p>
+            <p>These Terms are governed by the laws of the United States of America. Any disputes will be resolved through binding arbitration or in the courts of the United States of America.</p>
 
             <h2>12. Changes to Terms</h2>
             <p>We may update these Terms from time to time. We will notify users of significant changes via email or platform notification. Continued use after changes constitutes acceptance of the new Terms.</p>
@@ -296,8 +287,7 @@
             <h2>13. Contact Information</h2>
             <div class="contact-info">
                 <h3>Questions about these Terms?</h3>
-                <p>Contact us at: <a href="mailto:legal@whisperly.com" class="email-link">legal@whisperly.com</a></p>
-                <p>Or visit our support center for additional help.</p>
+                <p>Visit our support center for additional help.</p>
             </div>
         </main>
 
